--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BASEURL = https://flip.id
+BASEURL = https://opensource-demo.orangehrmlive.com
 
 CHROME_PATH = driver/chromedriver
 WEBDRIVER_CHROME = webdriver.chrome.driver
