--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,11 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-
-    - run: cp env/env.sample .env
-
+        
     - name: Build with Maven
-      run: mvn clean install
+      run: |
+        cp env/env.sample .env
+        mvn clean install
 
     - name: Login to DockerHub
       uses: docker/login-action@v1 
