--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,20 +20,20 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-        
+
     - name: Build with Maven
       run: |
         cp env/env.sample .env
         mvn clean install
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v1 
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    # - name: Login to DockerHub
+    #   uses: docker/login-action@v1 
+    #   with:
+    #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+    #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v2.10.0
-      with:
-          push: true
-          tags: dikabrenda/maven_project:latest
+    # - name: Build and push Docker images
+    #   uses: docker/build-push-action@v2.10.0
+    #   with:
+    #       push: true
+    #       tags: dikabrenda/maven_project:latest
