--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
 
     - name: Build with Maven
       run: |
-        cp env/env.sample .env
-        mvn clean install
+        cp -r env/env.sample .env
+        mvn clean test
 
     - name: Login to DockerHub
       uses: docker/login-action@v1 
