--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Build with Maven
       run: |
-        cp -r env/env.sample .env
+        cp -a env/env.sample .env
         mvn clean test
 
     - name: Login to DockerHub
